@@ -30,6 +30,7 @@ package fr.gouv.vitam.worker.core.plugin.traceability;
 import com.fasterxml.jackson.databind.JsonNode;
 import fr.gouv.vitam.batch.report.model.entry.TraceabilityReportEntry;
 import fr.gouv.vitam.common.PropertiesUtils;
+import fr.gouv.vitam.common.VitamConfiguration;
 import fr.gouv.vitam.common.accesslog.AccessLogInfoModel;
 import fr.gouv.vitam.common.json.JsonHandler;
 import fr.gouv.vitam.common.model.ItemStatus;
@@ -56,7 +57,7 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.InputStream;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import static fr.gouv.vitam.batch.report.model.ReportStatus.KO;
@@ -79,7 +80,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandler {
+public class ChecksSecureTraceabilityDataStoragelogPluginTest extends ActionHandler {
     @Rule public MockitoRule mockitoRule = MockitoJUnit.rule();
     @Rule public TemporaryFolder temporaryFolder = new TemporaryFolder();
 
@@ -89,20 +90,17 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
     @Mock HandlerIO handler;
     @Mock WorkerParameters param;
 
-    private ChecksSecureTaceabilityDataStoragelogPlugin checksSecureTaceabilityDataStoragelogPlugin;
+    private ChecksSecureTraceabilityDataStoragelogPlugin checksSecureTraceabilityDataStoragelogPlugin;
     private File reportTempFile;
-
-    private static final String STRATEGIES_JSON = "linkedCheckTraceability/strategies.json";
-    private static final String STRATEGIES_WITH_2_OFFRES_JSON = "linkedCheckTraceability/strategies_with_2_offres.json";
 
     private static final String TRACEABILITY_OPERATION_EVENT_JSON_FILE =
         "linkedCheckTraceability/traceability_operation_event.json";
     private static final String TRACEABILITY_STORAGE_EVENT_JSON_FILE =
         "linkedCheckTraceability/traceability_storage_event.json";
 
-    private static final String DEFAULT_STRATEGY_ID = "default";
     private static final String DEFAULT_OFFER_ID = "default";
     private static final String SECONDARY_OFFER_ID = "secondary";
+    private static final List<String> OFFER_IDS = List.of(DEFAULT_OFFER_ID, SECONDARY_OFFER_ID);
 
     private static final String FILE_NAME = "file.zip";
     private static final String REPORT_FILENAME = "report";
@@ -119,15 +117,12 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
     public void setUp() throws Exception {
         when(storageClientFactory.getClient()).thenReturn(storageClient);
 
-        checksSecureTaceabilityDataStoragelogPlugin =
-            new ChecksSecureTaceabilityDataStoragelogPlugin(storageClientFactory);
+        checksSecureTraceabilityDataStoragelogPlugin =
+            new ChecksSecureTraceabilityDataStoragelogPlugin(storageClientFactory);
 
         lenient().when(param.getObjectName()).thenReturn(OBJECT_NAME);
         lenient().when(handler.getJsonFromWorkspace(eq(param.getObjectName() + separator + WorkspaceConstants.REPORT)))
             .thenReturn(createObjectNode());
-
-        final File strategiesFile = PropertiesUtils.getResourceFile(STRATEGIES_JSON);
-        lenient().when(handler.getInput(eq(0), eq(File.class))).thenReturn(strategiesFile);
 
         final File dummy = temporaryFolder.newFile();
         when(handler.getNewLocalFile(anyString())).thenReturn(dummy);
@@ -139,7 +134,7 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
 
     private void preapre() throws Exception {
         final File traceabilityFile = PropertiesUtils.getResourceFile(TRACEABILITY_STORAGE_EVENT_JSON_FILE);
-        when(handler.getInput(eq(1))).thenReturn(traceabilityFile);
+        when(handler.getInput(eq(0))).thenReturn(traceabilityFile);
 
         TraceabilityEvent event = new TraceabilityEvent(TraceabilityType.OPERATION, null, null, HASH,
             null, null, null,
@@ -149,14 +144,17 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
         when(handler.getJsonFromWorkspace(
             eq(TRACEABILITY_OPERATION_DIRECTORY + separator + param.getObjectName() + separator + DATA_FILE)))
             .thenReturn(JsonHandler.toJsonNode(event));
+
+        when(storageClient.getOffers(VitamConfiguration.getDefaultStrategy()))
+            .thenReturn(OFFER_IDS);
     }
 
     @Test
     public void should_skip_operation_traceability_event() throws Exception {
         final File traceabilityFile = PropertiesUtils.getResourceFile(TRACEABILITY_OPERATION_EVENT_JSON_FILE);
-        when(handler.getInput(eq(1))).thenReturn(traceabilityFile);
+        when(handler.getInput(eq(0))).thenReturn(traceabilityFile);
 
-        ItemStatus itemStatus = checksSecureTaceabilityDataStoragelogPlugin.execute(param, handler);
+        ItemStatus itemStatus = checksSecureTraceabilityDataStoragelogPlugin.execute(param, handler);
 
         assertEquals(itemStatus.getGlobalStatus(), StatusCode.OK);
         verify(storageClient, times(0)).exists(anyString(), any(DataCategory.class), anyString(), anyList());
@@ -170,11 +168,11 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
         preapre();
         // Given
         when(storageClient
-            .exists(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME), eq(Collections.singletonList(
-                DEFAULT_OFFER_ID))))
-            .thenReturn(Collections.singletonMap(DEFAULT_OFFER_ID, false));
+            .exists(eq(VitamConfiguration.getDefaultStrategy()), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
+                eq(OFFER_IDS)))
+            .thenReturn(Map.ofEntries(Map.entry(DEFAULT_OFFER_ID, false), Map.entry(SECONDARY_OFFER_ID, true)));
         // When
-        ItemStatus itemStatus = checksSecureTaceabilityDataStoragelogPlugin.execute(param, handler);
+        ItemStatus itemStatus = checksSecureTraceabilityDataStoragelogPlugin.execute(param, handler);
 
         // Then
         assertThat(itemStatus.getGlobalStatus()).isEqualTo(StatusCode.KO);
@@ -191,15 +189,16 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
 
         // Given
         when(storageClient
-            .exists(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME), eq(Collections.singletonList(
-                DEFAULT_OFFER_ID))))
-            .thenReturn(Collections.singletonMap(DEFAULT_OFFER_ID, true));
-        when(storageClient.getInformation(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
-            eq(Collections.singletonList(DEFAULT_OFFER_ID)), anyBoolean())).thenReturn(
+            .exists(eq(VitamConfiguration.getDefaultStrategy()), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
+                eq(OFFER_IDS)))
+            .thenReturn(Map.ofEntries(Map.entry(DEFAULT_OFFER_ID, true), Map.entry(SECONDARY_OFFER_ID, true)));
+        when(storageClient
+            .getInformation(eq(VitamConfiguration.getDefaultStrategy()), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
+                eq(OFFER_IDS), anyBoolean())).thenReturn(
             createObjectNode()
         );
         // When
-        ItemStatus itemStatus = checksSecureTaceabilityDataStoragelogPlugin.execute(param, handler);
+        ItemStatus itemStatus = checksSecureTraceabilityDataStoragelogPlugin.execute(param, handler);
 
         // Then
         assertThat(itemStatus.getGlobalStatus()).isEqualTo(StatusCode.KO);
@@ -214,17 +213,14 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
     public void test_when_hashes_are_not_similar() throws Exception {
         preapre();
 
-        final File strategiesFile = PropertiesUtils.getResourceFile(STRATEGIES_WITH_2_OFFRES_JSON);
-        when(handler.getInput(eq(0), eq(File.class))).thenReturn(strategiesFile);
-
         when(storageClient
-            .exists(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
-                eq(Arrays.asList(DEFAULT_OFFER_ID,
-                    SECONDARY_OFFER_ID))))
+            .exists(eq(VitamConfiguration.getDefaultStrategy()), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
+                eq(OFFER_IDS)))
             .thenReturn(Map.ofEntries(Map.entry(DEFAULT_OFFER_ID, true), Map.entry(SECONDARY_OFFER_ID, true)));
         String fakeHash = "HASH";
-        when(storageClient.getInformation(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
-            eq(Arrays.asList(DEFAULT_OFFER_ID, SECONDARY_OFFER_ID)), anyBoolean())).thenReturn(
+        when(storageClient
+            .getInformation(eq(VitamConfiguration.getDefaultStrategy()), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
+                eq(Arrays.asList(DEFAULT_OFFER_ID, SECONDARY_OFFER_ID)), anyBoolean())).thenReturn(
             createObjectNode().setAll(
                 Map.of(DEFAULT_OFFER_ID,
                     createObjectNode().put(DIGEST, HASH),
@@ -234,7 +230,7 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
             ));
 
         // When
-        ItemStatus itemStatus = checksSecureTaceabilityDataStoragelogPlugin.execute(param, handler);
+        ItemStatus itemStatus = checksSecureTraceabilityDataStoragelogPlugin.execute(param, handler);
 
         // Then
         assertThat(itemStatus.getGlobalStatus()).isEqualTo(StatusCode.KO);
@@ -247,19 +243,16 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
 
 
     @Test
-    public void test_when_multi_offer_without_error() throws Exception {
+    public void should_verify_storage_operation_event_without_error() throws Exception {
         preapre();
 
-        final File strategiesFile = PropertiesUtils.getResourceFile(STRATEGIES_WITH_2_OFFRES_JSON);
-        when(handler.getInput(eq(0), eq(File.class))).thenReturn(strategiesFile);
-
         when(storageClient
-            .exists(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
-                eq(Arrays.asList(DEFAULT_OFFER_ID,
-                    SECONDARY_OFFER_ID))))
+            .exists(eq(VitamConfiguration.getDefaultStrategy()), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
+                eq(OFFER_IDS)))
             .thenReturn(Map.ofEntries(Map.entry(DEFAULT_OFFER_ID, true), Map.entry(SECONDARY_OFFER_ID, true)));
-        when(storageClient.getInformation(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
-            eq(Arrays.asList(DEFAULT_OFFER_ID, SECONDARY_OFFER_ID)), anyBoolean())).thenReturn(
+        when(storageClient
+            .getInformation(eq(VitamConfiguration.getDefaultStrategy()), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
+                eq(OFFER_IDS), anyBoolean())).thenReturn(
             createObjectNode().setAll(
                 Map.of(DEFAULT_OFFER_ID,
                     createObjectNode().put(DIGEST, HASH),
@@ -278,41 +271,9 @@ public class ChecksSecureTaceabilityDataStoragelogPluginTest extends ActionHandl
             .getContainerAsync(anyString(), eq(FILE_NAME), eq(DataCategory.STORAGELOG), any(AccessLogInfoModel.class)))
             .thenReturn(response);
         // When
-        ItemStatus itemStatus = checksSecureTaceabilityDataStoragelogPlugin.execute(param, handler);
+        ItemStatus itemStatus = checksSecureTraceabilityDataStoragelogPlugin.execute(param, handler);
 
         // Then
-        assertEquals(itemStatus.getGlobalStatus(), StatusCode.OK);
-        verify(storageClient).exists(anyString(), any(DataCategory.class), anyString(), anyList());
-        verify(storageClient).getContainerAsync(anyString(), anyString(), any(DataCategory.class), any());
-
-        JsonNode report = JsonHandler.getFromFile(reportTempFile);
-        TraceabilityReportEntry reportEntry = JsonHandler.getFromJsonNode(report, TraceabilityReportEntry.class);
-        assertEquals(OK.name(), reportEntry.getStatus());
-    }
-
-    @Test
-    public void should_verify_storage_operation_event_without_error() throws Exception {
-        preapre();
-
-        when(storageClient.getInformation(eq(DEFAULT_STRATEGY_ID), eq(DataCategory.STORAGELOG), eq(FILE_NAME),
-            eq(Collections.singletonList(DEFAULT_OFFER_ID)), anyBoolean())).thenReturn(
-            createObjectNode().setAll(
-                Map.of(DEFAULT_OFFER_ID,
-                    createObjectNode().put(DIGEST, HASH)
-                )
-            )
-        );
-
-        Response response = mock(Response.class);
-        when(response.readEntity(eq(InputStream.class))).thenReturn(
-            new ByteArrayInputStream(FILE_CONTENT.getBytes())
-        );
-
-        when(storageClient
-            .getContainerAsync(anyString(), eq(FILE_NAME), eq(DataCategory.STORAGELOG), any(AccessLogInfoModel.class)))
-            .thenReturn(response);
-        ItemStatus itemStatus = checksSecureTaceabilityDataStoragelogPlugin.execute(param, handler);
-
         assertEquals(itemStatus.getGlobalStatus(), StatusCode.OK);
         verify(storageClient).exists(anyString(), any(DataCategory.class), anyString(), anyList());
         verify(storageClient).getContainerAsync(anyString(), anyString(), any(DataCategory.class), any());
